@@ -1,5 +1,10 @@
 13 February 2009
 
+* Redo mode keys slightly more cleanly and apply them to command prompt
+  editing. vi or emacs mode is controlled by the session option status-keys.
+
+12 February 2009
+
 * Looking up argv[0] is expensive, so just use p_comm for the window name which
   is good enough. Also increase name update time to 500 ms.
 
@@ -1109,7 +1114,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.254 2009-02-13 00:43:04 nicm Exp $
+$Id: CHANGES,v 1.255 2009-02-13 21:39:45 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
